# muos-samba

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  result  test.ps1
.cargo/: config.toml
src/: file_system.rs  file_tree.rs  fstree.rs  gamepad_handler.rs  main.rs  prelude.rs  ui.rs  util.rs
src/gamepad/: gamepad.rs  key.rs  mod.rs
src/widgets/: border.rs  button.rs  mod.rs  text.rs
