[package]
name = "muos-samba"
version = "0.1.0"
authors = ["Sky <sky@leite.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_sdl2_gl = { version = "0.28.0" }
fs-tree = "0.5.5"
im = "15.1.0"
walkdir = "2.5.0"
# sdl2 = { version = "0.37.0", features = ["ttf", "gfx", "static-link", "use-pkgconfig"] }
# taffy = "0.5.2"
